# Simple-JSON-parser

./: jsonParser.cabal
src/: Main.hs
