name:                jsonParser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Josemarialanda/Simple-JSON-parser
license:             BSD3
license-file:        LICENSE
author:              José María Landa Chávez
maintainer:          josemaria.landa@gmail.com
copyright:           2020 José María Landa Chávez
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable jsonParser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
